env-variable.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: nginx
  labels:
    env: production
spec: 
  containers:
    - name: nginx
      image: nginx
      command:
        - /bin/bash
        - -c
        - echo "Hello World"
      args:
        - /bin/bash
        - -c
        - echo "Hello World"
